@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-10T16:17:16Z",
+  "timestamp" : "2022-06-11T00:56:14Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 354,
+  "count" : 355,
   "uniques" : 191,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
